# nook_rest_api

./: .env-example  Dockerfile  Dockerfile.prod  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main.yml
src/: auth.py  main.py  settings.py  utils.py
src/db/: create_database.py  database.py
src/endpoints/: README.md  authentication.py  client.py  park.py  test.py
src/models/: README.md  client.py  park.py  parking_spot.py  utils.py
src/repositories/: README.md  __init__.py  client.py  parking_spot.py  parks.py
src/schemas/: README.md  client.py  park.py  parking_spot.py
tests/Nook-API-Manual-Tests/: Nook-API-Manual-Tests.json  bruno.json
tests/Nook-API-Manual-Tests/client/: create_new_user.bru  get_User_by_user_id.bru  workflow-1.json
tests/integration_testing/: README.md
tests/unit_testing/: README.md
tests/unit_testing/enpoints/: test_client_endpoints.py
tests/unit_testing/repositories/: test_client_repository.py
